--- a/index.css
+++ b/index.css
@@ -15,7 +15,6 @@
 }
 
 .avatar-dot {
-    display: none;
     width: 25px;
     height: 25px;
     border-radius: 60% 0% 60% 0%;
@@ -23,8 +22,9 @@
 }
 
 .avatar-img {
-    border-radius: 30% 0% 30% 0%;
+    border-radius: 100%;
     box-shadow: 1px 1px 10px #A8A8A8;
+    border-radius: 30% 0% 40% 0%;
     padding: 2px;
 }
 
@@ -66,7 +66,7 @@
 }
 
 .contact-icon {
-    /* color: green; */
+    color: green;
 }
 
 .summary {
@@ -189,7 +189,7 @@
 .card {
     width: 320px;
     margin: 30px 20px;
-    padding: 10px;
+    padding: 15px;
     border-radius: 15% 1% 40% 20%;
     box-shadow: 1px 1px 10px #A8A8A8;
 
@@ -224,7 +224,7 @@
 
 .card-icons {
     padding: 0px 30px;
-    margin: 30px 0px 30px 0px;
+    margin: 30px 0px 10px 0px;
 }
 
 .card-icons > img {
